# tpm-mcp

./: .gitignore  CITATION.cff  README.md  _old_project-tracking-pm.md  pyproject.toml
agents/: tpm.md
assets/: sample-report.html
skills/tpm-report/: SKILL.md
skills/tpm-report/context/: html-template.md  overview.md
skills/tpm-report/workflows/: generate-pdf.md
src/tpm_mcp/: __init__.py  db.py  json_export.py  json_import.py  migrate.py  models.py  schema.sql  server.py
src/tracker_mcp/: db.py  migrate.py  models.py  schema.sql  server.py
tests/: __init__.py  test_db.py  test_migrate.py  test_server.py  test_ticket_search.py
